# haskell-web

./: Procfile  heap.cabal
.stack-work/install/bf6b262a/flag-cache/: basement-0.0.8-JK1udt7g7Qi9BgKCheib2X  cryptonite-0.25-1XLaDRz67nvF22EmlLpONE  expiring-cache-map-0.0.6.1-3TokoI2XjEeK4vURqQVo91  foundation-0.0.21-IMRxkWcRuoO50z31g4bjmH  heap-0.1.0.0  memory-0.14.16-9ccOYZCIMdICYBLyVp7bd1  mime-types-0.1.0.8-LKKvOy4Qa71IxJa0ssc0G3  wai-middleware-static-0.8.2-Dar2L2shrcs9Xytl5OGqFA
src/: HeapImpl.hs  Main.hs  TeamInfo.hs
