name:                heap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/heap#readme
license:             BSD3
license-file:        LICENSE
author:              José Breno
maintainer:          jose.souza@ccc.ufcg.edu.br
copyright:           2018 José Breno
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable heap
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  extensions:          OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , scotty
                       , http-types
                       , containers
                       , wai-extra
                       , wai-middleware-static
                       , heroku 0.1.2.3